--- a/styles/styles.css
+++ b/styles/styles.css
@@ -263,11 +263,12 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   width: 528px;
-  height: 581px;
+
   background-color: rgba(255, 255, 255, 1);
 }
 
@@ -288,6 +289,140 @@ ul {
   border: 1px solid rgba(0, 0, 0, 0.1);
 
   cursor: pointer;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  fill: #2196f3;
+}
+
+.form-title {
+  display: block;
+  margin-bottom: 12px;
+  color: rgba(33, 33, 33, 1);
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+
+.form-group {
+  position: relative;
+  display: block;
+  margin-bottom: 10px;
+  transition-property: border, fill;
+  transition-duration: 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-group:focus-within .form-input,
+.form-group:hover .form-input {
+  border: 1px solid #2196f3;
+}
+.form-group:focus-within .form-icon,
+.form-group:hover .form-icon {
+  fill: rgba(33, 150, 243, 1);
+}
+
+.form-policy {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.form-label {
+  margin-bottom: 4px;
+  display: block;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  text-align: left;
+}
+
+.form-input {
+  width: 100%;
+  padding: 11px 11px 12px 35px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: transparent;
+}
+
+.form-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+}
+
+.form-comment {
+  margin-bottom: 4px;
+  display: block;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  text-align: left;
+}
+.form-comment-input {
+  width: 100%;
+  padding: 11px 11px 12px 12px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: transparent;
+}
+
+textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-policy-description {
+  color: rgba(117, 117, 117, 1);
+
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.7;
+}
+.policy-href {
+  color: rgba(33, 150, 243, 1);
+  text-decoration: underline rgba(33, 150, 243, 1);
+}
+
+/* Checkbox */
+.custom-checkbox {
+  margin-right: 7px;
+  width: 16px;
+  height: 15px;
+
+  border-radius: 2px;
+  outline: 1px solid rgba(33, 33, 33, 1);
+  outline-offset: -2px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-checkbox-icon {
+  opacity: 0;
+  transition-property: opacity, background-color, outline;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox:checked + .custom-checkbox .custom-checkbox-icon {
+  opacity: 1;
+}
+.checkbox:checked + .custom-checkbox {
+  width: 16px;
+  height: 15px;
+  background-color: #2196f3;
+  outline: 1px solid rgba(33, 33, 33, 0);
 }
 
 /*Преимущества*/
@@ -483,7 +618,16 @@ button {
   line-height: 1.87;
   letter-spacing: 0.03em;
 
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
   cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15) inset;
 }
 
 .button-primary {
@@ -532,6 +676,43 @@ button {
   background-color: var(--accent-color);
   box-shadow: 0px 2px 2px 0px #0000001f, 0px 1px 2px 0px #00000014,
     0px 3px 1px 0px #0000001a;
+}
+
+.subscribe-button {
+  border-radius: 4px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 29px;
+  padding-right: 28px;
+
+  color: var(--primary-wight-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.subscribe-button:hover,
+.subscribe-button:focus {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15) inset;
+}
+
+.send-button {
+  border-radius: 4px;
+  padding: 10px 56px;
+  cursor: pointer;
+
+  color: var(--primary-wight-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
 }
 
 .filter .title {
@@ -637,6 +818,7 @@ address {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-right: 93px;
 }
 .join-title {
   margin-bottom: 20px;
@@ -664,6 +846,49 @@ address {
 
 .join .socials-icon {
   fill: currentColor;
+}
+.subscribe-form {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  margin-right: 12px;
+
+  font-size: 16px;
+  line-height: 1.25;
+
+  color: #fff;
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  outline: transparent;
+
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-form:hover,
+.subscribe-form:focus {
+  border: 1px solid #fff;
+}
+
+.subscribe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscribe-icon {
+  margin-left: 10px;
+
+  /* stroke: rgba(0, 0, 0, 1); */
+  stroke-width: 1px;
+}
+
+.subscribe-btn-text {
+  display: flex;
+  align-items: center;
 }
 
 /* Фильтр портфолио */
